# inst-upd

./: .env.example  .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  robo.toml  rustfmt.toml
src/: core.rs  lib.rs  main.rs
src/workers/: camera.rs  mod.rs  rvideo.rs  telegram_bot.rs  ws_server.rs
